# vt100-rust

./: .gitmodules  .rustfmt.toml  CHANGELOG  CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml
.github/workflows/: tests.yaml
examples/: fuzz.rs  generate_fixture.rs  perf.rs  process.rs  process_cb.rs  process_cb_bb.rs  process_cb_bb_no_unhandled.rs  process_diff.rs  process_full.rs  real_terminal_compare.rs  vte.rs
fuzz/in/: alternate_buffer  attrs  bs  combining  decsc  decstbm  el  ich_dch_ech  il_dl  relative_movement  ri  ris  scroll  split_escape_sequences  wrap  wrap_weird
fuzz/src/: main.rs
src/: attrs.rs  callbacks.rs  cell.rs  color.rs  ffi.c  ffi.rs  grid.rs  lib.rs  parser.rs  perform.rs  pos.rs  row.rs  screen.rs  state.rs  term.rs  types.rs  unicode.rs
tests/: attr.rs  basic.rs  control.rs  csi.rs  escape.rs  init.rs  mode.rs  osc.rs  processing.rs  quickcheck.rs  scroll.rs  split-escapes.rs  text.rs  weird.rs  window_contents.rs  zero-width.rs
tests/data/fixtures/: absolute_movement.in  attrs.in  colors.in  combining.in  el.in  ich_dch_ech.in  il_dl.in  relative_movement.in  ri.in  ris.in  split_escape_sequences.in  wide.in  wrap.in
tests/data/fixtures/attrs/: 7.json  7.typescript
tests/data/fixtures/combining/: 11.json  2.json  4.json  5.json  6.json
tests/data/fixtures/il_dl/: 16.json
tests/data/fixtures/ri/: 5.json  6.json
tests/data/fixtures/ris/: 1.json  1.typescript
tests/data/fixtures/wrap/: 23.json
tests/helpers/: fixtures.rs  mod.rs
tests/support/: mod.rs
