[package]
name = "vt100"
version = "0.15.2"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2021"

description = "Library for parsing terminal data"
homepage = "https://github.com/doy/vt100-rust"
repository = "https://github.com/doy/vt100-rust"
readme = "README.md"
keywords = ["terminal", "vt100"]
categories = ["command-line-interface", "encoding"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
itoa = "1.0.14"
unicode-width = "0.2.0"
vte = "0.14.0"

[dev-dependencies]
nix = { version = "0.29.0", features = ["term"] }
quickcheck = "1.0"
rand = "0.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
terminal_size = "0.4.1"
vte = "0.14.0"
